Added number of ignored tests with examples for some features to implement in future releases

--- a/JsonQL.Tests/JsonQL.Tests.csproj
+++ b/JsonQL.Tests/JsonQL.Tests.csproj
@@ -25,6 +25,16 @@
 		<None Remove="Functions\StringFunctions\Upper\JsonFile1.json" />
 		<None Remove="Functions\StringFunctions\Lower\ExpectedCompiledJson.json" />
 		<None Remove="Functions\StringFunctions\Lower\JsonFile1.json" />
+		<None Remove="FutureReleases\Grouping\Companies.json" />
+		<None Remove="FutureReleases\Grouping\ExpectedCompiledJson.json" />
+		<None Remove="FutureReleases\Grouping\JsonFile1.json" />
+		<None Remove="FutureReleases\ComplexProjections\Companies.json" />
+		<None Remove="FutureReleases\ComplexProjections\JsonFile1.json" />
+		<None Remove="FutureReleases\JsonValuePathElements\Sort\JsonFile1.json" />
+		<None Remove="FutureReleases\MultilineQueries\ExpectedCompiledJson.json" />
+		<None Remove="FutureReleases\MultilineQueries\JsonFile1.json" />
+		<None Remove="FutureReleases\ComplexProjections\ExpectedCompiledJson.json" />
+		<None Remove="FutureReleases\JsonValuePathElements\Sort\ExpectedCompiledJson.json" />
 		<None Remove="JsonMutators\CopyFields\CopiedFieldsReplaceObjectFields\ExpectedCompiledJson.json" />
 		<None Remove="JsonMutators\CopyFields\CopyFieldsFromCurrentJson\ExpectedCompiledJson.json" />
 		<None Remove="JsonMutators\CopyFields\CopyFieldsFromParent\ExpectedCompiledJson.json" />
@@ -304,6 +314,17 @@
 		<EmbeddedResource Include="Functions\StringFunctions\Upper\JsonFile1.json" />
 		<EmbeddedResource Include="Functions\StringFunctions\Lower\ExpectedCompiledJson.json" />
 		<EmbeddedResource Include="Functions\StringFunctions\Lower\JsonFile1.json" />
+		<EmbeddedResource Include="FutureReleases\Grouping\Companies.json" />
+		<EmbeddedResource Include="FutureReleases\Grouping\ExpectedCompiledJson.json" />
+		<EmbeddedResource Include="FutureReleases\Grouping\JsonFile1.json" />
+		<EmbeddedResource Include="FutureReleases\ComplexProjections\Companies.json" />
+		<EmbeddedResource Include="FutureReleases\MultilineQueries\ExpectedCompiledJson.json" />
+		<EmbeddedResource Include="FutureReleases\MultilineQueries\JsonFile1.json" />
+		<EmbeddedResource Include="FutureReleases\ComplexProjections\ExpectedCompiledJson.json" />
+		<EmbeddedResource Include="FutureReleases\ComplexProjections\JsonFile1.json" />
+		<EmbeddedResource Include="FutureReleases\JsonValuePathElements\Sort\ExpectedCompiledJson.json" />
+		<EmbeddedResource Include="FutureReleases\JsonValuePathElements\Sort\JsonFile1.json" />
+		<EmbeddedResource Include="FutureReleases\MultilineQueries\JsonFile1_TempDiagnostics.json" />
 		<EmbeddedResource Include="JsonMutators\CopyFields\CopiedFieldsReplaceObjectFields\ExpectedCompiledJson.json" />
 		<EmbeddedResource Include="JsonMutators\CopyFields\CopyFieldsFromCurrentJson\ExpectedCompiledJson.json" />
 		<EmbeddedResource Include="JsonMutators\CopyFields\CopyFieldsFromParent\ExpectedCompiledJson.json" />
