- Completed more sections in documentation

--- a/JsonQL.Demos/DocFiles/Functions/BooleanFunctions/IsEven/index.rst.template
+++ b/JsonQL.Demos/DocFiles/Functions/BooleanFunctions/IsEven/index.rst.template
@@ -6,4 +6,19 @@ IsEven
    :local:
    :depth: 2
    
-- TODO: Add contents here...
+- The function 'IsEven' is used to check if a JsonQL expression evaluates to an even number.
+
+Function Parameters
+===================
+
+- **value**:
+    - Required: Yes
+    - Type: any valid JsonQL expression.
+    - Description: Any valid JsonQL. If JsonQL evaluates the value to a numeric even number, function will return true. 
+
+Examples
+========
+    
+.. sourcecode:: json
+
+    <IncludedFilePlaceHolder>Examples.json</IncludedFilePlaceHolder>
