--- a/JsonQL.Demos/DocFiles/Functions/BooleanFunctions/HasField/index.rst.template
+++ b/JsonQL.Demos/DocFiles/Functions/BooleanFunctions/HasField/index.rst.template
@@ -6,4 +6,24 @@ HasField
    :local:
    :depth: 2
    
-- TODO: Add contents here...
+- The function 'HasField' is used to check if a JsonPath expression evaluates to a JSON object that has a given field.
+
+Function Parameters
+===================
+
+- **path**:
+    - Required: Yes
+    - Type: JSON path.
+    - Description:  valid json path. Examples: "e.Salary", "e.Address.Street"
+
+- **key**:
+    - Required: Yes
+    - Type: string
+    - Description: JSON field name to check for existence in the object referenced by JSON path in parameter **path**.
+
+Examples
+========
+    
+.. sourcecode:: json
+
+    <IncludedFilePlaceHolder>Examples.json</IncludedFilePlaceHolder>
