- Completed more sections in documentation - Renamed assert parameter in conversion functions from assert to assertOnFail to avoid conflicts with assert operator (and also make the meaning more clear). This isa breaking change only if there are existing JsonQL expressions that use named parameter 'assert' in these functions (ToDateTime, ToBoolean, etc)

--- a/JsonQL.Demos/DocFiles/Functions/ConversionFunctions/ToBoolean/index.rst.template
+++ b/JsonQL.Demos/DocFiles/Functions/ConversionFunctions/ToBoolean/index.rst.template
@@ -6,4 +6,29 @@ ToBoolean
    :local:
    :depth: 2
    
-- TODO: Add contents here...
+- The function 'ToBoolean' is used to convert a value to a JSON **boolean** type.
+
+Function Parameters
+===================
+
+- **value**:
+    - Required: Yes
+    - Type: Any valid JsonQL expression (including invalid path, null, etc).
+    - Description: If the JsonQL expression in this parameter is evaluated to one of the valid values, the function will return a boolean type value. Otherwise the function returns undefined.
+        .. note::
+            
+            - The following values can be converted to boolean: 'True', 'true', 'False', 'false', true, false
+        
+
+- **assertOnFail**:
+    - Required: No    
+    - Type: boolean
+    - Default value: false
+    - Description: If the value is true, and conversion fails, an error is reported that will stop compilation.
+
+Examples
+========
+    
+.. sourcecode:: json
+
+    <IncludedFilePlaceHolder>Examples.json</IncludedFilePlaceHolder>
