--- a/JsonQL.Demos/DocFiles/Functions/NumericFunctions/Abs/index.rst.template
+++ b/JsonQL.Demos/DocFiles/Functions/NumericFunctions/Abs/index.rst.template
@@ -6,4 +6,19 @@ Abs
    :local:
    :depth: 2
    
-- TODO: Add contents here...
+- The function 'Abs' is used to get absolute value of a number.
+
+Function Parameters
+===================
+
+- **value**:
+    - Required: Yes
+    - Type: any valid JsonQL expression.
+    - Description: Any valid JsonQL. If JsonQL evaluates the value to a numeric number, function will return absolute value of the number. Otherwise, undefined value will be returned. 
+
+Examples
+========
+    
+.. sourcecode:: json
+
+    <IncludedFilePlaceHolder>Examples.json</IncludedFilePlaceHolder>
