--- a/JsonQL.Demos/DocFiles/Functions/StringFunctions/Concatenate/index.rst.template
+++ b/JsonQL.Demos/DocFiles/Functions/StringFunctions/Concatenate/index.rst.template
@@ -6,4 +6,22 @@ Concatenate
    :local:
    :depth: 2
    
-- TODO: Add contents here...
+- The function 'Concatenate' concatenates values evaluated from jsonQL expressions. 
+    .. note::
+    
+        - Some non-string values like booleans, date/time, numbers, etc are automatically converted to strings before being concatenated, but to have better control over the format of converted values, use conversion functions outlines in :doc:`../../ConversionFunctions/ToString/index`.
+
+Function Parameters
+===================
+
+- **values**:
+    - Required: Yes
+    - Type: List of comma separated valid JsonQL expressions.
+    - Description: Collection of expressions to concatenate. JsonQL will try to convert the values in this parameter to string type, if the values are not strings. 
+
+Examples
+========
+    
+.. sourcecode:: json
+
+    <IncludedFilePlaceHolder>Examples.json</IncludedFilePlaceHolder>
