--- a/JsonQL.Demos/JsonQL.Demos.csproj
+++ b/JsonQL.Demos/JsonQL.Demos.csproj
@@ -14,7 +14,15 @@
 	  <None Remove="DocFiles\Functions\BooleanFunctions\Examples\Example.json" />
 	  <None Remove="DocFiles\Functions\BooleanFunctions\Examples\Examples.json" />
 	  <None Remove="DocFiles\Functions\BooleanFunctions\Examples\Result.json" />
-	  <None Remove="DocFiles\Functions\BooleanFunctions\IsEven\Examples.json" />
+	  <None Remove="DocFiles\Functions\ConversionFunctions\Examples\Data.json" />
+	  <None Remove="DocFiles\Functions\ConversionFunctions\Examples\Examples.json" />
+	  <None Remove="DocFiles\Functions\ConversionFunctions\Examples\Result.json" />
+	  <None Remove="DocFiles\Functions\NumericFunctions\Examples\Data.json" />
+	  <None Remove="DocFiles\Functions\NumericFunctions\Examples\Examples.json" />
+	  <None Remove="DocFiles\Functions\NumericFunctions\Examples\Result.json" />
+	  <None Remove="DocFiles\Functions\StringFunctions\Examples\Data.json" />
+	  <None Remove="DocFiles\Functions\StringFunctions\Examples\Examples.json" />
+	  <None Remove="DocFiles\Functions\StringFunctions\Examples\Result.json" />
 	  <None Remove="DocFiles\JsonMutatorFunctions\CopyFields\Example\Example.json" />
 	  <None Remove="DocFiles\JsonMutatorFunctions\CopyFields\Example\Result.json" />
 	  <None Remove="DocFiles\JsonMutatorFunctions\MergeArray\Example\Example.json" />
@@ -145,9 +153,15 @@
 		<EmbeddedResource Include="DocFiles\Functions\BooleanFunctions\Examples\Data.json" />
 		<EmbeddedResource Include="DocFiles\Functions\BooleanFunctions\Examples\Examples.json" />
 		<EmbeddedResource Include="DocFiles\Functions\BooleanFunctions\Examples\Result.json" />
-		<EmbeddedResource Include="DocFiles\Functions\BooleanFunctions\HasField\Examples.json" />
-		<EmbeddedResource Include="DocFiles\Functions\BooleanFunctions\IsEven\Examples.json" />
-		<EmbeddedResource Include="DocFiles\Functions\BooleanFunctions\IsOdd\Examples.json" />
+		<EmbeddedResource Include="DocFiles\Functions\ConversionFunctions\Examples\Data.json" />
+		<EmbeddedResource Include="DocFiles\Functions\ConversionFunctions\Examples\Examples.json" />
+		<EmbeddedResource Include="DocFiles\Functions\ConversionFunctions\Examples\Result.json" />
+		<EmbeddedResource Include="DocFiles\Functions\NumericFunctions\Examples\Data.json" />
+		<EmbeddedResource Include="DocFiles\Functions\NumericFunctions\Examples\Examples.json" />
+		<EmbeddedResource Include="DocFiles\Functions\NumericFunctions\Examples\Result.json" />
+		<EmbeddedResource Include="DocFiles\Functions\StringFunctions\Examples\Data.json" />
+		<EmbeddedResource Include="DocFiles\Functions\StringFunctions\Examples\Examples.json" />
+		<EmbeddedResource Include="DocFiles\Functions\StringFunctions\Examples\Result.json" />
 		<EmbeddedResource Include="DocFiles\JsonMutatorFunctions\CopyFields\Example\Example.json" />
 		<EmbeddedResource Include="DocFiles\JsonMutatorFunctions\CopyFields\Example\Result.json" />
 		<EmbeddedResource Include="DocFiles\JsonMutatorFunctions\MergeArray\Example\Example.json" />
