--- a/JsonQL/JsonQL.csproj
+++ b/JsonQL/JsonQL.csproj
@@ -5,8 +5,8 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-		<PackageVersion>1.7.1</PackageVersion>
-		<Version>1.7.1</Version>
+		<PackageVersion>1.7.2</PackageVersion>
+		<Version>1.7.2</Version>
 		<PackageTags>Json JsonQL Json+QL Query Json+Query+Language Json+path Json+Query</PackageTags>
 		<Authors>Artak Hakobyan</Authors>
 		<Company>OROptimizer</Company>
@@ -15,7 +15,8 @@
 		</Description>
 		<Copyright>Copyright 2018 (c) OROptimizer. All rights reserved.</Copyright>
 		<PackageReleaseNotes>
-			- Updated the project link to main docuemntationj website
+			- A small fix to allow using '$' in comments, when it is not intended to be used as JsonQL QL expression. More comprehensive fix to make this work for other JsonQL mutation functions like '$value', '$copy', '$merge' will be done as part of JIRA ticket JE-29.
+			- Addressing latest versions of OROptimizer.Shared and UniversalExpressionParser.
 		</PackageReleaseNotes>
 		<RepositoryUrl>https://github.com/artakhak/JsonQL</RepositoryUrl>
 		<PackageProjectUrl>https://jsonql.readthedocs.io/en/latest/</PackageProjectUrl>
@@ -41,11 +42,11 @@
 
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-		<!--<PackageReference Include="OROptimizer.Shared" Version="2.5.0" />-->
-		<ProjectReference Include="..\..\OROptimizer.Shared\OROptimizer.Shared\OROptimizer.Shared.csproj" />
+		<PackageReference Include="OROptimizer.Shared" Version="2.6.0" />
+		<!--<ProjectReference Include="..\..\OROptimizer.Shared\OROptimizer.Shared\OROptimizer.Shared.csproj" />-->
 
-		<!--<PackageReference Include="UniversalExpressionParser" Version="1.1.0" />-->
-		<ProjectReference Include="..\..\UniversalExpressionParser\UniversalExpressionParser\UniversalExpressionParser.csproj" />
+		<PackageReference Include="UniversalExpressionParser" Version="1.3.0" />
+		<!--<ProjectReference Include="..\..\UniversalExpressionParser\UniversalExpressionParser\UniversalExpressionParser.csproj" />-->
 	</ItemGroup>
 
 </Project>
